--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
 	<meta charset='utf-8'>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
 	<title>Svelte Template SPA PWA</title>
+
+	<link rel="manifest" href="/manifest.json">
+	<meta name="description" content="Svelte Template SPA PWA">
+	<meta name="theme-color" content="#ff0040" />
+
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<meta name="apple-mobile-web-app-title" content="Svelte PWA">
+	<link rel="apple-touch-icon" href="/images/icons/icon-152x152.png">
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
@@ -14,5 +25,60 @@
 </head>
 
 <body>
+	<div id="installContainer" class="hidden">
+		<button id="butInstall" type="button">
+			Install
+		</button>
+	</div>
+
+	<noscript>
+		<div>
+			Oops! Javascript required here! Allow it and try again!
+		</div>
+	</noscript>
+
+	<script>
+		if ('serviceWorker' in navigator) {
+			window.addEventListener('load', () => {
+				navigator.serviceWorker
+					.register('/service-worker.js')
+					.then(console.log('[ServiceWorker] Registered Successfully'))
+					.catch(err => console.log(`[ServiceWorker] Error: ${err}`));
+			});
+		} else {
+			console.log('Service Worker not supported.');
+		}
+
+		let deferredPrompt;
+		const divInstall = document.getElementById('installContainer');
+		const butInstall = document.getElementById('butInstall');
+
+		window.addEventListener('beforeinstallprompt', (e) => {
+			console.log('beforeinstallprompt', e);
+			// Prevent Chrome 76 and later from showing the mini-infobar
+			e.preventDefault();
+			// Stash the event so it can be triggered later.
+			deferredPrompt = e;
+			// Remove the 'hidden' class from the install button container
+			divInstall.classList.toggle('hidden', false);
+
+			butInstall.addEventListener('click', (e) => {
+				// hide our user interface that shows our A2HS button
+				divInstall.classList.toggle('hidden', true);
+				// Show the prompt
+				deferredPrompt.prompt();
+				// Wait for the user to respond to the prompt
+				deferredPrompt.userChoice.then((choiceResult) => {
+					if (choiceResult.outcome === 'accepted') {
+						console.log('User accepted the A2HS prompt');
+					} else {
+						console.log('User dismissed the A2HS prompt');
+					}
+					deferredPrompt = null;
+				});
+			});
+		});
+	</script>
 </body>
+
 </html>
