--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 			window.addEventListener('load', () => {
 				navigator.serviceWorker
 					.register('/service-worker.js')
-					.then(console.log('[ServiceWorker] Registered Successfully'))
+					.then((registration) => console.log('[ServiceWorker] Registered Successfully', registration.scope))
 					.catch(err => console.log(`[ServiceWorker] Error: ${err}`));
 			});
 		} else {
